# service-manager-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: kind.rs  launchd.rs  lib.rs  openrc.rs  rc.rs  rcd.rs  sc.rs  scm.rs  systemd.rs  typed.rs  utils.rs  winsw.rs
src/sc/: shell_escape.rs
system-tests/: Cargo.toml
system-tests/src/: main.rs
system-tests/tests/: lib.rs  runner.rs
