[package]
name = "service-manager"
description = "Provides adapters to communicate with various operating system service managers"
categories = ["config"]
keywords = ["generator"]
version = "0.1.2"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2021"
homepage = "https://github.com/chipsenkbeil/service-manager-rs"
repository = "https://github.com/chipsenkbeil/service-manager-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace]
members = ["system-tests"]

[dependencies]
dirs = "4.0"
which = "4.0"

clap = { version = "3", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
