[package]
name = "system-tests"
description = "System tests for service-manager crate"
version = "0.0.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2021"
publish = false

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
service-manager = { path = ".." }

[target.'cfg(windows)'.dependencies]
windows-service = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
